Update Persistent Storage service to better handle http GET requests. Requests can now return errors along with the json object.
