# PersistentStorage/Server/go/client_response.go
@@ -9,15 +9,13 @@
 
 package swagger
 
-type Transaction struct {
+type ClientResponse struct {
 
-	Clientid string `json:"clientid,omitempty"`
+	Title string `json:"title,omitempty"`
 
-	TransactionData string `json:"transaction_data,omitempty"`
+	Code string `json:"code,omitempty"`
 
-	Createdate string `json:"createdate,omitempty"`
+	Message string `json:"message,omitempty"`
 
-	Hash string `json:"hash,omitempty"`
-
-	Signature string `json:"signature,omitempty"`
+	Client *ClientResponseClient `json:"client,omitempty"`
 }
