# PersistentStorage/Server/go/transaction_response_transaction.go
@@ -9,7 +9,7 @@
 
 package swagger
 
-type Transaction struct {
+type TransactionResponseTransaction struct {
 
 	Clientid string `json:"clientid,omitempty"`
 
